plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.78' apply false
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)


idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}